--- a/main/webapp/modules/core/styles/views/data-table-view.less
+++ b/main/webapp/modules/core/styles/views/data-table-view.less
@@ -170,6 +170,10 @@ div.data-table-cell-content {
   position: relative;
   }
 
+div.data-table-cell-background-highlight {
+  background-color: #FAE97F;
+}
+
 div.data-table-cell-content-numeric {
   text-align: right;
   }
