--- a/main/webapp/modules/core/styles/views/data-table-view.less
+++ b/main/webapp/modules/core/styles/views/data-table-view.less
@@ -174,6 +174,10 @@ div.data-table-cell-background-highlight {
   background-color: #FAE97F;
 }
 
+div.data-table-cell-text-highlight {
+  font-weight: bold;
+}
+
 div.data-table-cell-content-numeric {
   text-align: right;
   }
